# CashFlow

./: .gitignore  .prettierignore  README.md  TODO.md
backend/: .gitignore  Dockerfile  README.md  __init__.py  database.py  main.py  pyproject.toml  requirement.txt  schema.py  test_main.py
backend/controllers/: __init__.py  account.py  cash_flow.py  cashflow.py  dashboard.py
backend/models/: Account.py  __init__.py  account.py  cash_flow.py
backend/schema/: __init__.py  account.py  cash_flow.py  dashboard.py  enums.py
db/: app.db  tables.sql
design/: backend_endpoints.mermaid  frontend_design.mermaid
design/database/DDL/: index.sql  tables.sql
frontend/: package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: accounts.ts  cashflow.ts  dashboard.ts
frontend/src/components/: BalanceChart.tsx  DashboardOverview.tsx  Navbar.tsx  RecentTransactions.tsx  mode-toggle.tsx  theme-context.ts  theme-hook.ts  theme-provider.tsx
frontend/src/components/ui/: button.tsx  pagination.tsx
frontend/src/lib/: button-variants.ts
frontend/src/pages/: Accounts.tsx  CashFlow.tsx  Dashboard.tsx  MainLayout.tsx
frontend/src/types/: account.ts  cash_flow.ts  dashboard.ts
frontend/src/utils/: map-functions.ts
