[tool.poetry]
name = "cash-flow-backend"
version = "1.0.0"
description = "A fastAPI backend for CashFlow Application"
authors = ["adithya-adee <adithya25905@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.120.0,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
pydantic = ">=2.12.3,<3.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
aiosqlite = ">=0.21.0,<0.22.0"
httpx = ">=0.28.1,<0.29.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
black = ">=25.9.0,<26.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
